# GPTGrooves

./: .eslintrc.js  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  justfile  next.config.js  package-lock.json  package.json  tsconfig.json
app/: layout.tsx  page.tsx
gpt_lambda/: .dockerignore  .gitignore  .python-version  Dockerfile  pyproject.toml
infra/: .gitignore  .terraform.lock.hcl  data.tf  main.tf  variable.tf
music_generator_lambda/: .dockerignore  .env.example  Dockerfile  lambda_handler.py  pyproject.toml  requirements.txt
music_generator_lambda/music_generator/: db.py  generate_and_save_bars.py  generate_bar_assortment.py  generate_markup.py  generate_section.py  generate_section_effects.py  generate_song.py  generator.py  generator2.py  music_generator_types.py
music_generator_lambda/music_generator/music_generator_types/: base_song_types.py  effect_types.py  markup_types.py
music_generator_lambda/music_generator/utilities/: logs.py  set_langchain_environment.py
music_generator_lambda/music_generator/workflows/: backfill_song_days.py  daily_generate_song.py  delete_duplicate_songs_on_day.py  delete_future_songs.py  delete_songs_older_than.py  generate_bar_assortment.py
music_generator_lambda/src/music_generator/: generator.py  sample.json  types.py
music_generator_lambda/src/ta/: db.py
music_generator_lambda/src/ta/utilities/: cacheing.py  wipe_table.py
public/: audioSchedulerWorker.js  sound.js
synth_resources/: .gitignore  GPT-House.maxpat  dependencies.json  drums.export.json  drums.export.license
(+52 files in other folders)
